added csrf token, added csrf endpoints, removed stateless policy